# irodolly

./: .env.dev  .gitignore  Dockerfile  README.md  app.py  cdk.json  debug.py  log.py  mypy.ini  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
api/: resize.py
cdk_example/: cdk_example_stack.py
cdk_stacks/: front_stack.py  resize_stack.py
docs/: ideanote.md
src/: debug_entrypoint.py  pose_detection.py  resize.py
src/libs/: log.py
tests/unit/: test_cdk_example_stack.py  test_front_stack.py
